# Tenken

./: .gitignore  CMakeLists.txt  DUMMY  LICENSE  LICENSE.txt  README.md  build.sh  start.md  toolchain-mingw.cmake  version.h.in
docs/: TODO.md  changelog.md  devlog.md
source/: ContextDisplay.cpp  ContextDisplay.h  Favourite.h  FavouriteW.cpp  HitsW.cpp  HitsW.h  LogW.cpp  LogW.h  ScanProc.cpp  ScanProc.h  Scanner.cpp  Scanner.h  SearchW.cpp  SearchW.h  TargetPopUp.cpp  TargetPopUp.hpp  display.cpp  display.h  main.cpp  start_end.cpp  start_end.h  types.h
source/core/: FavouriteList.cpp  FavouriteList.h  HitList.cpp  HitList.h  Scanner.cpp  Scanner.h  scan_ops.cpp  scan_ops.h  utils.cpp  utils.h
source/platform/: ActOS.h  LinuxImpl.cpp  LinuxPlatform.cpp  LinuxProcess.cpp  Platform.h  ProcessOS.h  WindowsImpl.cpp  WindowsPlatform.cpp  WindowsProcess.cpp  platform_linux.cpp  platform_linux.h
source/ui/: ContextDisplay.cpp  ContextDisplay.h  DataInspector.cpp  DataInspectorW.h  FavouriteW.cpp  FavouriteW.h  HexW.cpp  HexW.h  HitsW.cpp  HitsW.h  LogW.cpp  LogW.h  MapPopUp.cpp  MapPopUp.h  SearchW.cpp  SearchW.h  TargetPopUp.cpp  TargetPopUp.h  display.cpp  display.h
wordsPublic/: planning.md
